Replace FPO slider image with illustrations

--- a/slider.html
+++ b/slider.html
@@ -15,10 +15,9 @@
 
   <div class="slider">
     <ul class="box">
-      <li><img src="img/1.png"></li>
-      <li><img src="img/2.png"></li>
-      <li><img src="img/3.png"></li>
-      <li><img src="img/4.png"></li>
+      <li><img src="img/daisy_dark.png"></li>
+      <li><img src="img/gus_dark.png"></li>
+      <li><img src="img/tammy_dark.png"></li>
     </ul>
   </div>
 
@@ -28,7 +27,7 @@
       sliders.push(new Slider(this))
     })
   </script>
-    
+
   <div class="slider-nav">
     <ul>
       <li><a href="javascript:sliders[0].goToPrev()">Prev</a></li>
